--- a/src/app/modules/home/components/error-page-component/error-page-component.component.html
+++ b/src/app/modules/home/components/error-page-component/error-page-component.component.html
@@ -1,20 +1,17 @@
-<div class="container">
-  <div class="mt-3">
-    <div class="error-title {{ errorTitleCss }}">{{ errorTitle }}</div>
+<div class="error-page-container">
+  <div class="error-title {{ errorTitleCss }}">{{ errorTitle }}</div>
 
-    <div class="mt-5 card card-body p-5">
-      <div class="row">
-        <div class="col-md-6 mb-3 d-flex justify-content-center">
-          <img
-            src="https://techinterview.fra1.cdn.digitaloceanspaces.com/images/stickers/sticker_6_512.png"
-            alt="{{ errorTitle }}"
-            class="img-fluid"
-          />
-        </div>
-        <div class="col-md-6">
-          <ng-content></ng-content>
-        </div>
-      </div>
+  <div class="error-card card card-body">
+    <div class="error-content">
+      <ng-content></ng-content>
+    </div>
+
+    <div class="error-image-wrapper">
+      <img
+        src="https://techinterview.fra1.cdn.digitaloceanspaces.com/images/stickers/sticker_6_512.png"
+        alt="{{ errorTitle }}"
+        class="error-image"
+      />
     </div>
   </div>
 </div>
