--- a/src/app/modules/admin/components/telegram/job-posting-message-subscriptions/job-posting-message-subscriptions.component.scss
+++ b/src/app/modules/admin/components/telegram/job-posting-message-subscriptions/job-posting-message-subscriptions.component.scss
@@ -62,7 +62,7 @@
 
       &.ng-option-selected {
         background-color: var(--warm-accent-primary);
-        color: white;
+        color: var(--warm-btn-contrast-text);
       }
     }
   }
