--- a/src/app/modules/admin/components/telegram/salaries-stat-subscriptions/stat-data-cache-records.component.scss
+++ b/src/app/modules/admin/components/telegram/salaries-stat-subscriptions/stat-data-cache-records.component.scss
@@ -72,7 +72,7 @@
 
       &.ng-option-selected {
         background-color: var(--warm-accent-primary);
-        color: white;
+        color: var(--warm-btn-contrast-text);
       }
     }
   }
