--- a/src/app/components/admin-navbar/admin-navbar.component.scss
+++ b/src/app/components/admin-navbar/admin-navbar.component.scss
@@ -54,7 +54,7 @@
 
   &:active {
     background-color: var(--warm-accent-primary);
-    color: white;
+    color: var(--warm-btn-contrast-text);
   }
 }
 
