--- a/src/app/modules/admin/components/salaries/historical-data-templates/historical-data-templates.component.scss
+++ b/src/app/modules/admin/components/salaries/historical-data-templates/historical-data-templates.component.scss
@@ -70,7 +70,7 @@
 
       &.ng-option-selected {
         background-color: var(--warm-accent-primary);
-        color: white;
+        color: var(--warm-btn-contrast-text);
       }
     }
   }
