--- a/src/app/modules/salaries/components/add-salary/add-salary.component.scss
+++ b/src/app/modules/salaries/components/add-salary/add-salary.component.scss
@@ -52,7 +52,7 @@
 
   &.ng-option-selected {
     background-color: var(--warm-accent-primary);
-    color: white;
+    color: var(--warm-btn-contrast-text);
   }
 }
 
